// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render component 1`] = `
<div
  className="gf-form-button-row"
>
  <LinkButton
    fill="solid"
    href="/datasources"
    variant="secondary"
  >
    Back
  </LinkButton>
  <LinkButton
    disabled={false}
    fill="solid"
    href="/explore"
    variant="secondary"
  >
    Explore
  </LinkButton>
  <Button
    aria-label="Data source settings page Delete button"
    disabled={true}
    onClick={[MockFunction]}
    type="button"
    variant="destructive"
  >
    Delete
  </Button>
  <Button
    onClick={[MockFunction]}
    type="submit"
    variant="primary"
  >
    Test
  </Button>
</div>
`;

exports[`Render should render with buttons enabled 1`] = `
<div
  className="gf-form-button-row"
>
  <LinkButton
    fill="solid"
    href="/datasources"
    variant="secondary"
  >
    Back
  </LinkButton>
  <LinkButton
    disabled={false}
    fill="solid"
    href="/explore"
    variant="secondary"
  >
    Explore
  </LinkButton>
  <Button
    aria-label="Data source settings page Delete button"
    disabled={false}
    onClick={[MockFunction]}
    type="button"
    variant="destructive"
  >
    Delete
  </Button>
  <Button
    aria-label="Data source settings page Save and Test button"
    disabled={false}
    onClick={[Function]}
    type="submit"
    variant="primary"
  >
    Save & test
  </Button>
</div>
`;
